add tab control

--- a/SmartUI/MainWindow.xaml
+++ b/SmartUI/MainWindow.xaml
@@ -21,6 +21,8 @@
     </Controls:MetroWindow.RightWindowCommands>
 
     <Grid>
-
+        <local:MainView>
+            
+        </local:MainView>
     </Grid>
 </Controls:MetroWindow>
